postgres-operator/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-operator-ui
  namespace: postgres-operator
  labels:
    app: postgres-operator-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/name: postgres-operator-ui
    app.kubernetes.io/part-of: postgres-operator
    version: v1.6.0
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator-ui
  template:
    metadata:
      labels:
        app: postgres-operator-ui
        app.kubernetes.io/component: ui
        app.kubernetes.io/name: postgres-operator-ui
        app.kubernetes.io/part-of: postgres-operator
        version: v1.6.0
    spec:
      serviceAccountName: postgres-operator-ui
      containers:
        - name: "service"
          image: registry.opensource.zalan.do/acid/postgres-operator-ui:v1.6.0
          ports:
            - containerPort: 8081
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
---
